--- a/typst.toml
+++ b/typst.toml
@@ -5,6 +5,6 @@ entrypoint = "lib.typ"
 authors = ["8LWXpg"]
 license = "MIT"
 description = "make tree list easily"
-repository = ""
+repository = "https://github.com/8LWXpg/typst-tree-list"
 keywords = ["list", "tree", "item"]
 compiler = "0.10.0"
